crates/ruff_python_parser/tests/snapshots/invalid_syntax@params_star_separator_after_star_param.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/params_star_separator_after_star_param.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..61,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..28,
                    is_async: false,
                    decorator_list: [],
                    name: FunctionDefName {
                        name: Identifier {
                            id: Name("foo"),
                            range: 4..7,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                        type_params: None,
                    },
                    parameters: Parameters {
                        range: 7..23,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                end: 9,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 8..9,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: Some(
                            Parameter {
                                range: 11..16,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 12..16,
                                    node_index: NodeIndex(None),
                                    parameter_node_index: NodeIndex(None),
                                },
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [
                            ParameterWithDefault {
                                end: 22,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 21..22,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 21..22,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 25..28,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 25..28,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 29..60,
                    is_async: false,
                    decorator_list: [],
                    name: FunctionDefName {
                        name: Identifier {
                            id: Name("foo"),
                            range: 33..36,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                        type_params: None,
                    },
                    parameters: Parameters {
                        range: 36..55,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                end: 38,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 37..38,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 37..38,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: Some(
                            Parameter {
                                range: 40..45,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 41..45,
                                    node_index: NodeIndex(None),
                                    parameter_node_index: NodeIndex(None),
                                },
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [
                            ParameterWithDefault {
                                end: 48,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 47..48,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 47..48,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                end: 51,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 50..51,
                                    name: Identifier {
                                        id: Name("c"),
                                        range: 50..51,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 57..60,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 57..60,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(a, *args, *, b): ...
  |                   ^ Syntax Error: Keyword-only parameter separator not allowed after '*' parameter
2 | def foo(a, *args, b, c, *): ...
  |


  |
1 | def foo(a, *args, *, b): ...
2 | def foo(a, *args, b, c, *): ...
  |                         ^ Syntax Error: Keyword-only parameter separator not allowed after '*' parameter
  |
